--- a/Caddyfile
+++ b/Caddyfile
@@ -40,38 +40,23 @@
         format json
     }
 
-	# --- RULE 1: API (Unprotected) ---
-	# Any request starting with /api/ goes straight to the backend.
-	# NO Basic Auth here.
-	handle_path {$IDENTITY_SERVICE_PATH:/api/auth}/* {
-		reverse_proxy {
-			dynamic a {
-				name {$IDENTITY_SERVICE_DOMAIN}
-				port {$IDENTITY_SERVICE_PORT}
-				refresh 1s
-				dial_timeout 30s
-				versions ipv4 ipv6
-			}
-			import lb_settings
-			import passive_health_checks
-			header_up Host {upstream_hostport}
-		}
-	}
-
-	handle_path {$DATA_BRIDGE_PATH:/api/bridge}/* {
-		reverse_proxy {
-			dynamic a {
-				name {$DATA_BRIDGE_DOMAIN}
-				port {$DATA_BRIDGE_PORT}
-				refresh 1s
-				dial_timeout 30s
-				versions ipv4 ipv6
-			}
-			import lb_settings
-			import passive_health_checks
-			header_up Host {upstream_hostport}
-		}
-	}
+    # --- RULE 1: API (Unprotected) ---
+    # Any request starting with /api/ goes straight to the backend.
+    # NO Basic Auth here.
+    handle_path {$BACKEND_PATH:/api}/* {
+        reverse_proxy {
+            dynamic a {
+                name {$BACKEND_DOMAIN}
+                port {$BACKEND_PORT}
+                refresh 1s
+                dial_timeout 30s
+                versions ipv4 ipv6
+            }
+            import lb_settings
+            import passive_health_checks
+            header_up Host {upstream_hostport}
+        }
+    }
 
     # --- RULE 2: Frontend SPA (Protected) ---
     # Catch-all for everything else (/, index.html, .js, .css).
