--- a/Caddyfile
+++ b/Caddyfile
@@ -16,7 +16,6 @@
     }
 }
 
-# Snippet: Load Balancing Settings
 (lb_settings) {
     lb_policy round_robin
     lb_retries 100
@@ -24,7 +23,6 @@
     lb_try_interval 250ms
 }
 
-# Snippet: Passive Health Checks
 (passive_health_checks) {
     fail_duration 60s
     max_fails 300
@@ -44,96 +42,10 @@
     route {
 
         # -------------------------
-        # Identity service (preserve /api prefix)
+        # Data-bridge
         # -------------------------
-        handle /api/auth/* {
-            reverse_proxy {
-                dynamic a {
-                    name {$IDENTITY_SERVICE_DOMAIN}
-                    port {$IDENTITY_SERVICE_PORT}
-                    refresh 1s
-                    dial_timeout 30s
-                    versions ipv4 ipv6
-                }
-                import lb_settings
-                import passive_health_checks
-                header_up Host {upstream_hostport}
-            }
-        }
-        handle /api/profile/* {
-            reverse_proxy {
-                dynamic a {
-                    name {$IDENTITY_SERVICE_DOMAIN}
-                    port {$IDENTITY_SERVICE_PORT}
-                    refresh 1s
-                    dial_timeout 30s
-                    versions ipv4 ipv6
-                }
-                import lb_settings
-                import passive_health_checks
-                header_up Host {upstream_hostport}
-            }
-        }
-        handle /api/session/* {
-            reverse_proxy {
-                dynamic a {
-                    name {$IDENTITY_SERVICE_DOMAIN}
-                    port {$IDENTITY_SERVICE_PORT}
-                    refresh 1s
-                    dial_timeout 30s
-                    versions ipv4 ipv6
-                }
-                import lb_settings
-                import passive_health_checks
-                header_up Host {upstream_hostport}
-            }
-        }
-        handle /api/users/* {
-            reverse_proxy {
-                dynamic a {
-                    name {$IDENTITY_SERVICE_DOMAIN}
-                    port {$IDENTITY_SERVICE_PORT}
-                    refresh 1s
-                    dial_timeout 30s
-                    versions ipv4 ipv6
-                }
-                import lb_settings
-                import passive_health_checks
-                header_up Host {upstream_hostport}
-            }
-        }
-        handle /api/telegram/* {
-            reverse_proxy {
-                dynamic a {
-                    name {$IDENTITY_SERVICE_DOMAIN}
-                    port {$IDENTITY_SERVICE_PORT}
-                    refresh 1s
-                    dial_timeout 30s
-                    versions ipv4 ipv6
-                }
-                import lb_settings
-                import passive_health_checks
-                header_up Host {upstream_hostport}
-            }
-        }
-        handle /api/twitter/* {
-            reverse_proxy {
-                dynamic a {
-                    name {$IDENTITY_SERVICE_DOMAIN}
-                    port {$IDENTITY_SERVICE_PORT}
-                    refresh 1s
-                    dial_timeout 30s
-                    versions ipv4 ipv6
-                }
-                import lb_settings
-                import passive_health_checks
-                header_up Host {upstream_hostport}
-            }
-        }
 
-        # -------------------------
-        # Data-bridge HTTP endpoints
-        # -------------------------
+        # /api/bridge/*
         handle_path {$DATA_BRIDGE_PATH:/api/bridge}/* {
             reverse_proxy {
                 dynamic a {
@@ -149,9 +61,8 @@
             }
         }
 
-        # -------------------------
-        # tRPC
-        # -------------------------
+        # /api/trpc/*
+        # Use handle so the upstream sees /api/trpc...
         handle {$DATA_BRIDGE_TRPC_PATH:/api/trpc}/* {
             reverse_proxy {
                 dynamic a {
@@ -167,14 +78,39 @@
             }
         }
 
-        # -------------------------
-        # Socket.IO
-        # -------------------------
+        # /socket.io/*
+        # Use handle so /socket.io is not stripped.
         handle /socket.io/* {
             reverse_proxy {
                 dynamic a {
                     name {$DATA_BRIDGE_DOMAIN}
                     port {$DATA_BRIDGE_PORT}
+                    refresh 1s
+                    dial_timeout 30s
+                    versions ipv4 ipv6
+                }
+                import lb_settings
+                import passive_health_checks
+                header_up Host {upstream_hostport}
+            }
+        }
+
+        # -------------------------
+        # Identity service (catch-all for the rest of /api)
+        # -------------------------
+        # This prevents HTML SPA fallback for endpoints like:
+        # /api/profile
+        # /api/session
+        # /api/users
+        # /api/twitter
+        # /api/telegram
+        #
+        # NOTE: handle_path strips /api before proxying.
+        handle_path {$IDENTITY_SERVICE_API_PATH:/api}/* {
+            reverse_proxy {
+                dynamic a {
+                    name {$IDENTITY_SERVICE_DOMAIN}
+                    port {$IDENTITY_SERVICE_PORT}
                     refresh 1s
                     dial_timeout 30s
                     versions ipv4 ipv6
