--- a/Caddyfile
+++ b/Caddyfile
@@ -16,6 +16,7 @@
     }
 }
 
+# Snippet: Load Balancing Settings
 (lb_settings) {
     lb_policy round_robin
     lb_retries 100
@@ -23,11 +24,20 @@
     lb_try_interval 250ms
 }
 
+# Snippet: Passive Health Checks
 (passive_health_checks) {
     fail_duration 60s
     max_fails 300
     unhealthy_latency 5s
     unhealthy_request_count 200
+}
+
+# Snippet: Frontend Basic Auth
+# IMPORTANT: BASIC_AUTH_PASS must be a bcrypt hash
+(frontend_auth) {
+    basicauth {
+        {$BASIC_AUTH_USER} {$BASIC_AUTH_PASS}
+    }
 }
 
 # ---------------------------------------------------------
@@ -42,7 +52,7 @@
     route {
 
         # -------------------------
-        # Data-bridge
+        # Data-bridge (UNPROTECTED)
         # -------------------------
 
         # /api/bridge/*
@@ -96,15 +106,27 @@
         }
 
         # -------------------------
-        # Identity service (catch-all for the rest of /api)
+        # Identity service (UNPROTECTED)
+        # Catch-all for the rest of /api
         # -------------------------
-        # This prevents HTML SPA fallback for endpoints like:
-        # /api/profile
-        # /api/session
-        # /api/users
-        # /api/twitter
-        # /api/telegram
-        #
+
+        # Optional: cover the bare /api path too
+        handle /api {
+            reverse_proxy {
+                dynamic a {
+                    name {$IDENTITY_SERVICE_DOMAIN}
+                    port {$IDENTITY_SERVICE_PORT}
+                    refresh 1s
+                    dial_timeout 30s
+                    versions ipv4 ipv6
+                }
+                import lb_settings
+                import passive_health_checks
+                header_up Host {upstream_hostport}
+            }
+        }
+
+        # /api/*
         # NOTE: handle_path strips /api before proxying.
         handle_path {$IDENTITY_SERVICE_API_PATH:/api}/* {
             reverse_proxy {
@@ -122,9 +144,65 @@
         }
 
         # -------------------------
-        # Frontend SPA fallback
+        # Frontend assets (PROTECTED)
         # -------------------------
+
+        # Vite/SPA typical static paths
+        handle /assets/* {
+            import frontend_auth
+            reverse_proxy {
+                dynamic a {
+                    name {$FRONTEND_DOMAIN}
+                    port {$FRONTEND_PORT}
+                    refresh 1s
+                    dial_timeout 30s
+                    versions ipv4 ipv6
+                }
+                import lb_settings
+                import passive_health_checks
+                header_up Host {upstream_hostport}
+            }
+        }
+
+        handle /favicon.ico {
+            import frontend_auth
+            reverse_proxy {
+                dynamic a {
+                    name {$FRONTEND_DOMAIN}
+                    port {$FRONTEND_PORT}
+                    refresh 1s
+                    dial_timeout 30s
+                    versions ipv4 ipv6
+                }
+                import lb_settings
+                import passive_health_checks
+                header_up Host {upstream_hostport}
+            }
+        }
+
+        handle /manifest.json {
+            import frontend_auth
+            reverse_proxy {
+                dynamic a {
+                    name {$FRONTEND_DOMAIN}
+                    port {$FRONTEND_PORT}
+                    refresh 1s
+                    dial_timeout 30s
+                    versions ipv4 ipv6
+                }
+                import lb_settings
+                import passive_health_checks
+                header_up Host {upstream_hostport}
+            }
+        }
+
+        # -------------------------
+        # Frontend SPA fallback (PROTECTED)
+        # -------------------------
+        # Everything not matched above goes to the frontend,
+        # protected by Basic Auth.
         handle {
+            import frontend_auth
             reverse_proxy {
                 dynamic a {
                     name {$FRONTEND_DOMAIN}
