--- a/Caddyfile
+++ b/Caddyfile
@@ -38,9 +38,6 @@
     }
 
     # --- RULE 1: API (Unprotected) ---
-    # Changed handle_path to handle so /api is NOT stripped.
-    # If your backend handles routing starting at /, keep handle_path.
-    # If your backend handles routing starting at /api, use handle.
     handle {$BACKEND_PATH:/api}/* {
         reverse_proxy {
             dynamic a {
@@ -52,14 +49,34 @@
             }
             import lb_settings
             import passive_health_checks
-            # REMOVED: header_up Host {upstream_hostport}
+        }
+    }
+
+    # --- NEW RULE: Redirect Handler (Unprotected) ---
+    # 1. Matches requests to /r
+    # 2. Rewrites the path to /api/r (so the backend understands it)
+    # 3. Proxies to the backend (NOT the frontend)
+    handle /r {
+        rewrite * /api/r
+
+        reverse_proxy {
+            dynamic a {
+                name {$BACKEND_DOMAIN}
+                port {$BACKEND_PORT}
+                refresh 5s
+                dial_timeout 30s
+                versions ipv4 ipv6
+            }
+            import lb_settings
+            import passive_health_checks
         }
     }
 
     # --- RULE 2: Frontend SPA (Protected) ---
+    # This acts as the "catch-all" because it has no matcher.
+    # It MUST come after the specific handles above.
     handle {
         basicauth {
-            # Ensure this is a hash: caddy hash-password --plaintext 'mypass'
             {$BASIC_AUTH_USER} {$BASIC_AUTH_PASS}
         }
 
@@ -73,7 +90,6 @@
             }
             import lb_settings
             import passive_health_checks
-            # REMOVED: header_up Host {upstream_hostport}
         }
     }
 }
@@ -82,7 +98,6 @@
 # # 1. GLOBAL OPTIONS & SNIPPETS
 # # ---------------------------------------------------------
 
-# # Global options
 # {
 #     admin off
 #     persist_config off
@@ -95,7 +110,6 @@
 #     }
 # }
 
-# # Snippet: Load Balancing Settings
 # (lb_settings) {
 #     lb_policy round_robin
 #     lb_retries 100
@@ -103,7 +117,6 @@
 #     lb_try_interval 250ms
 # }
 
-# # Snippet: Passive Health Checks
 # (passive_health_checks) {
 #     fail_duration 60s
 #     max_fails 300
@@ -121,29 +134,28 @@
 #     }
 
 #     # --- RULE 1: API (Unprotected) ---
-#     # Any request starting with /api/ goes straight to the backend.
-#     # NO Basic Auth here.
-#     handle_path {$BACKEND_PATH:/api}/* {
+#     # Changed handle_path to handle so /api is NOT stripped.
+#     # If your backend handles routing starting at /, keep handle_path.
+#     # If your backend handles routing starting at /api, use handle.
+#     handle {$BACKEND_PATH:/api}/* {
 #         reverse_proxy {
 #             dynamic a {
 #                 name {$BACKEND_DOMAIN}
 #                 port {$BACKEND_PORT}
-#                 refresh 1s
+#                 refresh 5s
 #                 dial_timeout 30s
 #                 versions ipv4 ipv6
 #             }
 #             import lb_settings
 #             import passive_health_checks
-#             header_up Host {upstream_hostport}
+#             # REMOVED: header_up Host {upstream_hostport}
 #         }
 #     }
 
 #     # --- RULE 2: Frontend SPA (Protected) ---
-#     # Catch-all for everything else (/, index.html, .js, .css).
-#     # REQUIRES Basic Auth (password).
 #     handle {
 #         basicauth {
-#             # Remember: variable BASIC_AUTH_PASS must be a BCRYPT HASH
+#             # Ensure this is a hash: caddy hash-password --plaintext 'mypass'
 #             {$BASIC_AUTH_USER} {$BASIC_AUTH_PASS}
 #         }
 
@@ -151,13 +163,13 @@
 #             dynamic a {
 #                 name {$FRONTEND_DOMAIN}
 #                 port {$FRONTEND_PORT}
-#                 refresh 1s
+#                 refresh 5s
 #                 dial_timeout 30s
 #                 versions ipv4 ipv6
 #             }
 #             import lb_settings
 #             import passive_health_checks
-#             header_up Host {upstream_hostport}
+#             # REMOVED: header_up Host {upstream_hostport}
 #         }
 #     }
 # }
