comment out the redirect rule

--- a/Caddyfile
+++ b/Caddyfile
@@ -54,19 +54,19 @@
 
     # --- RULE 1B: Redirect Handler (Unprotected) ---
     # Proxies /r* directly to identity-service (no rewrite)
-    handle /r* {
-        reverse_proxy {
-            dynamic a {
-                name {$BACKEND_DOMAIN}
-                port {$BACKEND_PORT}
-                refresh 5s
-                dial_timeout 30s
-                versions ipv4 ipv6
-            }
-            import lb_settings
-            import passive_health_checks
-        }
-    }
+    #handle /r* {
+    #    reverse_proxy {
+    #        dynamic a {
+    #            name {$BACKEND_DOMAIN}
+    #            port {$BACKEND_PORT}
+    #           refresh 5s
+    #            dial_timeout 30s
+    #            versions ipv4 ipv6
+    #        }
+    #        import lb_settings
+    #        import passive_health_checks
+    #    }
+    #}
 
     # --- RULE 2: Frontend SPA (Protected) ---
     # Catch-all must come last
