--- a/Caddyfile
+++ b/Caddyfile
@@ -40,49 +40,68 @@
         format json
     }
 
-	# --- Frontend ---
-	reverse_proxy {
-		dynamic a {
-			name {$FRONTEND_DOMAIN}
-			port {$FRONTEND_PORT}
-			refresh 1s
-			dial_timeout 30s
-			versions ipv4 ipv6
-		}
-		import lb_settings
-		import passive_health_checks
-		header_up Host {upstream_hostport}
-	}
+    # --- Socket.IO (Data Bridge) ---
+    handle /socket.io/* {
+        reverse_proxy {
+            dynamic a {
+                name {$DATA_BRIDGE_DOMAIN}
+                port {$DATA_BRIDGE_PORT}
+                refresh 1s
+                dial_timeout 30s
+                versions ipv4 ipv6
+            }
+            import lb_settings
+            import passive_health_checks
 
-	# --- Internal Services ---
-	# Any request starting with /api/ goes straight to the backend.
-	handle_path {$IDENTITY_SERVICE_PATH:/api/auth}/* {
-		reverse_proxy {
-			dynamic a {
-				name {$IDENTITY_SERVICE_DOMAIN}
-				port {$IDENTITY_SERVICE_PORT}
-				refresh 1s
-				dial_timeout 30s
-				versions ipv4 ipv6
-			}
-			import lb_settings
-			import passive_health_checks
-			header_up Host {upstream_hostport}
-		}
-	}
+            # IMPORTANT: keep the public host, don't rewrite it to upstream_hostport
+            header_up Host {host}
+        }
+    }
 
-	handle_path {$DATA_BRIDGE_PATH:/api/bridge}/* {
-		reverse_proxy {
-			dynamic a {
-				name {$DATA_BRIDGE_DOMAIN}
-				port {$DATA_BRIDGE_PORT}
-				refresh 1s
-				dial_timeout 30s
-				versions ipv4 ipv6
-			}
-			import lb_settings
-			import passive_health_checks
-			header_up Host {upstream_hostport}
-		}
-	}
+    # --- Internal Services ---
+    handle_path {$IDENTITY_SERVICE_PATH:/api/auth}/* {
+        reverse_proxy {
+            dynamic a {
+                name {$IDENTITY_SERVICE_DOMAIN}
+                port {$IDENTITY_SERVICE_PORT}
+                refresh 1s
+                dial_timeout 30s
+                versions ipv4 ipv6
+            }
+            import lb_settings
+            import passive_health_checks
+            header_up Host {host}
+        }
+    }
+
+    handle_path {$DATA_BRIDGE_PATH:/api/bridge}/* {
+        reverse_proxy {
+            dynamic a {
+                name {$DATA_BRIDGE_DOMAIN}
+                port {$DATA_BRIDGE_PORT}
+                refresh 1s
+                dial_timeout 30s
+                versions ipv4 ipv6
+            }
+            import lb_settings
+            import passive_health_checks
+            header_up Host {host}
+        }
+    }
+
+    # --- Frontend (fallback) ---
+    handle {
+        reverse_proxy {
+            dynamic a {
+                name {$FRONTEND_DOMAIN}
+                port {$FRONTEND_PORT}
+                refresh 1s
+                dial_timeout 30s
+                versions ipv4 ipv6
+            }
+            import lb_settings
+            import passive_health_checks
+            header_up Host {host}
+        }
+    }
 }
