--- a/Caddyfile
+++ b/Caddyfile
@@ -89,6 +89,21 @@
         }
     }
 
+    handle_path {$DATA_BRIDGE_PATH:/api/profile}/* {
+        reverse_proxy {
+            dynamic a {
+                name {$IDENTITY_SERVICE_DOMAIN}
+                port {$IDENTITY_SERVICE_PORT}
+                refresh 1s
+                dial_timeout 30s
+                versions ipv4 ipv6
+            }
+            import lb_settings
+            import passive_health_checks
+            header_up Host {host}
+        }
+    }
+
     # --- Frontend (fallback) ---
     handle {
         reverse_proxy {
