revert no FE fallback

--- a/Caddyfile
+++ b/Caddyfile
@@ -105,18 +105,18 @@
     }
 
     # --- Frontend (fallback) ---
-    # handle {
-    #     reverse_proxy {
-    #         dynamic a {
-    #             name {$FRONTEND_DOMAIN}
-    #             port {$FRONTEND_PORT}
-    #             refresh 1s
-    #             dial_timeout 30s
-    #             versions ipv4 ipv6
-    #         }
-    #         import lb_settings
-    #         import passive_health_checks
-    #         header_up Host {host}
-    #     }
-    # }
+    handle {
+        reverse_proxy {
+            dynamic a {
+                name {$FRONTEND_DOMAIN}
+                port {$FRONTEND_PORT}
+                refresh 1s
+                dial_timeout 30s
+                versions ipv4 ipv6
+            }
+            import lb_settings
+            import passive_health_checks
+            header_up Host {host}
+        }
+    }
 }
