add 404 catchall to prevent fe fallback

--- a/Caddyfile
+++ b/Caddyfile
@@ -104,6 +104,10 @@
         }
     }
 
+    handle /api/* {
+        respond "API route not found" 404
+    }
+
     # --- Frontend (fallback) ---
     handle {
         reverse_proxy {
