--- a/Caddyfile
+++ b/Caddyfile
@@ -88,6 +88,23 @@
         }
     }
 
+    # --- Users (Identity Service) ---
+    handle /api/users/* {
+        uri strip_prefix /api
+        reverse_proxy {
+            dynamic a {
+                name {$IDENTITY_SERVICE_DOMAIN}
+                port {$IDENTITY_SERVICE_PORT}
+                refresh 1s
+                dial_timeout 30s
+                versions ipv4 ipv6
+            }
+            import lb_settings
+            import passive_health_checks
+        }
+    }
+
+
     # Profile exact
     handle /api/profile {
         uri strip_prefix /api
